Hoarder/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hoarder-ingress
  annotations:
    kubernetes.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: <your-domain>
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web
              port:
                number: 3000
